Fixed layout alignment. Crop profile.

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,8 @@
 
 :root {
   --main-bg-color: #FFFFCC;
-  --main-text-color: #FF3300;
+  --main-text-color: #333;
+  --style-text-color: #FF3300;
 }
 
 body {
@@ -22,85 +23,67 @@ body, html {
 
 .content {
   background-color: transparent;
-  width: 90%;
+  width: 80%;
   max-width: 1024px;
-  margin: 5% auto 0 auto;
+  margin: 0 auto 0 auto;
   /*padding-top: 60px;*/
   /*padding-bottom: 60px;*/
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  color: var(--style-text-color);
+  font-size: 1em;
+  border-bottom: 2px solid;
+  margin: 20px 20px 0px 20px;
+}
+
+.name {
+  font-family: Merriweather;
+  font-size: 45px;
+  color: var(--style-text-color);
+  display: inline-block;
+  margin: 0px;
+  line-height: 1.2em;
+}
+
+nav {
+  color: var(--style-text-color);
+  font-size: 1.5em;
+  text-align: right;
+  margin-top: 20px;
+  height: 50%;
+  bottom: 0px;
+  letter-spacing: 0.2em;
+}
+
+article {
+  margin: 20px;
+  padding: 0px;
 }
 
 .profile {
   float: left;
   width: 38%;
   margin: 20px;
+  padding: 0px;
 }
 
-.article {
-  
+a {
+  text-decoration: none;
+  color: #333;
+  border-bottom: 3px solid;
+  border-color: var(--style-text-color);
 }
 
-.name {
-  font-family: Merriweather;
-  font-size: 45px;
-  /*padding: 12px;*/
-  /*border: 4px solid #FF3300;*/
-  color: var(--main-text-color);
-  display: inline-block;
-  margin: 0px;
-  line-height: 1.2em;
+a:hover {
+  color: border-color: var(--style-text-color);
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  color: var(--main-text-color);
-  font-size: 1em;
-  border-bottom: 2px solid;
-  margin: 20px;
+p {
+  font-weight: 200; font-size: 20px;
 }
-
-nav {
-  color: var(--main-text-color);
-  font-size: 2em;
-  text-align: right;
-  margin: 15px;
-}
-
-
-.wrapper {box-sizing: border-box; height: 100%; overflow: auto; border: 4px solid}
-
-
-a {text-decoration: none; color: #333; border-bottom: 3px solid #FF3300;}
-a:hover {color: #FF3300}
-p {font-weight: 200; font-size: 20px;}
-
-.container {margin: 0 auto; width: 700px; padding: 120px 12px 50px; overflow: auto; border: 4px solid}
-article {padding: 60px; border: 4px solid}
-/* TODO find better cross-platform characters */
-/* article::before {
-  content: '\2601';
-  position: relative;
-  top: 0;
-  left: -30px;
-  color: #0068FF;
-  font-size: 24px;
-}
-article::after {
-  content: '\2A55\2A55\2A55\2A55';
-  position: relative;
-  top: 40px;
-  left: 300px;
-  color: #0068FF;
-  font-size: 44px;
-} */
-hr {border-bottom: 3px solid #0068FF; border: 4px solid}
 
 .meta {text-transform: uppercase; font-family: Arial, Courier New, Source Sans Pro, sans-serif; font-size: 10px; letter-spacing: .15em;}
 .meta a:hover {color: #333;}
-
-.inline-list {list-style: none; margin: 0; padding: 0;}
-.inline-list li {display: inline-block;}
-
-footer .inline-list li {margin-right: 40px;}
-footer a {border: none; color: #FF3300;}
-footer {margin: 0 auto; position: absolute; bottom: 55%; right: -255px; padding: 40px 0 0 0; width: 600px; -webkit-transform: rotate(-90deg);}
